--- a/src/scss/partials/_base.scss
+++ b/src/scss/partials/_base.scss
@@ -1,3 +1,13 @@
+html {
+    box-sizing: border-box;
+}
+
+*,
+*:before,
+*:after {
+    box-sizing: inherit;
+}
+
 body {
     font-family: $main-font;
     font-size: font-size(regular);
