add feed section

--- a/src/scss/partials/_vars.scss
+++ b/src/scss/partials/_vars.scss
@@ -19,7 +19,8 @@ $colours: (
     green: #7bdb4c,
     petrol: #789199,
     grey: #555d60,
-    lightgrey: #8e8e8e
+    lightgrey: #8e8e8e,
+    caption: #76797f
 );
 
 $breakpoints: (
