add slider functionality

--- a/src/scss/partials/_icons.scss
+++ b/src/scss/partials/_icons.scss
@@ -31,11 +31,11 @@
   content: "\e901";
 }
 
-.i--arrow_left:before {
+.i--arrow-left:before {
   content: "\e902";
 }
 
-.i--arrow_right:before {
+.i--arrow-right:before {
   content: "\e903";
 }
 
