--- a/src/scss/components/_hero.scss
+++ b/src/scss/components/_hero.scss
@@ -1,13 +1,26 @@
 .hero {
     margin-top: $header-height * -1;
     padding-top: $header-height;
+    height: 100%;
+}
+
+.hero__slider {
+    position: relative;
+    overflow: hidden;
+    height: 100%;
+    width: 100%;
+
 }
 
 .cases {
+    width: 100%;
+    height: 100%;
+    position: relative;
 }
 
 .case {
-    height: 100vh;
+    width: 100%;
+    height: 100%;
     position: relative;
     margin-bottom: baselines(4);
 
@@ -26,7 +39,7 @@
 
 .case__title {
     font-size: font-size(h3);
-    margin-top: baselines(-6);
+    margin-top: baselines(-9);
     text-align: center;
     font-weight: 700;
     text-transform: uppercase;
@@ -46,11 +59,17 @@
     margin: baselines(5.5)  auto;
 }
 
+.case__figure {
+    width: 100%;
+    height: 100%;
+}
+
 .case__image {
     position: absolute;
     top: 0;
     left: 0;
     height: 100%;
+    width: 100%;
     object-fit: cover;
     object-position: 45% 50%;
 }
@@ -65,4 +84,58 @@
     left: 50%;
     transform: translateX(-50%);
     font-size: 40px;
+}
+
+.hero__slider--active {
+    font-size: 0;
+    line-height: 0;
+    overflow: hidden;
+    white-space: nowrap;
+
+    .cases {
+        display: inline-block;
+    }
+
+    .case {
+        display: inline-block;
+
+        &:last-child {
+            margin-bottom: baselines(4);
+        }
+    }
+}
+
+.hero__slider-nav {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    width: 100%;
+    height: 40px;
+}
+
+.slider-nav {
+    width: 250px;
+    margin: 0 auto;
+    position: relative;
+}
+
+.slider-nav__button {
+    border: 0;
+    -webkit-appearance: none;
+    background: colour(black);
+    border-radius: 100%;
+    color: #fff;
+    width: 40px;
+    height: 40px;
+    padding: 0;
+    cursor: pointer;
+    position: absolute;
+
+    .i {
+        font-size: 40px;
+    }
+}
+
+.slider-nav__button--next {
+    right: 0;
 }
