--- a/src/scss/partials/_base.scss
+++ b/src/scss/partials/_base.scss
@@ -1,5 +1,6 @@
 html {
     box-sizing: border-box;
+    height: 100%;
 }
 
 *,
@@ -13,6 +14,7 @@ body {
     font-size: font-size(regular);
     line-height: baselines(3);
     min-width: breakpoint(mobile);
+    height: 100%;
 }
 
 img {
