--- a/src/scss/components/_hero.scss
+++ b/src/scss/components/_hero.scss
@@ -139,3 +139,10 @@
 .slider-nav__button--next {
     right: 0;
 }
+
+
+@media (min-width: breakpoint(tablet)) {
+    .case__title {
+        font-size: font-size(h2);
+    }
+}
