--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -152,6 +152,11 @@ a {
     vertical-align: middle;
     font-size: 40px; }
 
+@media (min-width: 768px) {
+  .site-header__logo {
+    display: inline;
+    width: auto; } }
+
 .site-nav {
   position: absolute;
   top: 0;
@@ -196,6 +201,26 @@ a {
 .nav-item__link {
   color: #fff;
   font-size: 30px; }
+
+@media (min-width: 768px) {
+  .site-nav {
+    position: static;
+    display: inline; }
+  .site-nav__toggle {
+    display: none; }
+  .site-nav__items {
+    position: static;
+    display: inline; }
+  .nav-item {
+    display: inline;
+    height: auto;
+    margin-right: 40px; }
+  .nav-item__link {
+    font-size: 17.5px;
+    font-weight: 400;
+    color: #8e8e8e; }
+    .nav-item__link:hover {
+      color: #fff; } }
 
 .site-section--full {
   height: 100%; }
@@ -321,6 +346,10 @@ a {
 .slider-nav__button--next {
   right: 0; }
 
+@media (min-width: 768px) {
+  .case__title {
+    font-size: 40px; } }
+
 .about {
   padding: 59.5px 22px; }
 
@@ -335,6 +364,17 @@ a {
   font-size: 15px;
   font-weight: 300;
   text-align: center; }
+
+@media (min-width: 768px) {
+  .about {
+    padding: 84px 84px; }
+  .about__title {
+    font-size: 30px;
+    line-height: 42px;
+    margin-bottom: 28px; }
+  .about__content {
+    font-size: 20px;
+    line-height: 28px; } }
 
 .feed {
   background: url(../imgs/feed-bg.jpg) no-repeat top center;
@@ -355,7 +395,8 @@ a {
   color: #fff;
   text-align: center;
   display: block;
-  font-weight: 300; }
+  font-weight: 300;
+  font-size: 20px; }
 
 .pic {
   margin-bottom: 21px; }
@@ -365,6 +406,27 @@ a {
   padding: 14px 21px;
   font-size: 15px;
   color: #76797f; }
+
+@media (min-width: 768px) {
+  .feed {
+    padding: 84px 84px; }
+  .feed__cta {
+    font-size: 30px;
+    margin-bottom: 21px; }
+  .feed__link {
+    font-size: 30px; }
+  .pics__list {
+    -webkit-columns: 2;
+       -moz-columns: 2;
+            columns: 2;
+    -webkit-column-fill: auto;
+       -moz-column-fill: auto;
+            column-fill: auto; }
+  .pic {
+    -webkit-column-break-inside: avoid;
+       page-break-inside: avoid;
+            break-inside: avoid;
+    display: inline-block; } }
 
 .site-footer {
   padding: 42px 21px;
