add contact tablet, desktop and hd styles

--- a/src/scss/components/_footer.scss
+++ b/src/scss/components/_footer.scss
@@ -1,6 +1,6 @@
 .site-footer {
     padding: baselines(6) baselines(3);
-    background: colour(black)
+    background: colour(black);
 }
 
 .social-networks {
