--- a/src/scss/partials/_vars.scss
+++ b/src/scss/partials/_vars.scss
@@ -10,7 +10,8 @@ $font-sizes: (
     h2: $base-font-size * 8,
     h3: $base-font-size * 6,
     small-alt: $base-font-size * 3.5,
-    regular-alt: $base-font-size * 4.75
+    regular-alt: $base-font-size * 4.75,
+    contact-cta: $base-font-size * 7.2
 );
 
 $colours: (
