--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -523,6 +523,10 @@ a {
   background-size: cover;
   padding: 59.5px 10px 98px 10px; }
 
+.contact-form {
+  max-width: 620px;
+  margin: 0 auto; }
+
 .contact-form__cta {
   text-align: center;
   color: #fff;
@@ -531,14 +535,33 @@ a {
   text-transform: uppercase;
   line-height: 28px; }
 
-.contact-form__fieldset {
+.contact-form__container {
   background: rgba(255, 255, 255, 0.2);
   padding: 21px 10px;
   margin: 0 -10px 21px -10px; }
 
-.contact-form__container {
+.contact-form__label {
   display: block;
-  margin-bottom: 7px; }
+  margin-bottom: 7px;
+  position: relative;
+  clear: both; }
+
+.contact-form__label--textarea {
+  top: 14px;
+  margin-bottom: 14px; }
+
+.contact-form__label--valid:after {
+  font-family: 'tamtam-icons';
+  content: '\e904';
+  position: absolute;
+  color: #7bdb4c;
+  top: 0;
+  right: 0;
+  font-size: 50px;
+  height: 50px;
+  width: 50px;
+  display: block;
+  line-height: 1; }
 
 .contact-form__input {
   font-family: "Lato", Helvetica, Arial, sans-serif;
@@ -552,8 +575,7 @@ a {
   border-radius: 0; }
 
 .contact-form__input--textarea {
-  height: 119px;
-  margin-top: 14px; }
+  height: 119px; }
 
 .contact-form__button {
   background: #fd5454;
@@ -567,18 +589,18 @@ a {
   margin: 0 auto;
   display: block; }
 
-.contact-form__warning {
+.form-message {
   background: rgba(0, 0, 0, 0.2);
   display: table;
   padding: 21px 10px;
   margin: 0 -10px; }
 
-.contact-form__warning-icon {
+.form-message__icon {
   display: table-cell;
-  width: 20%;
+  width: 40px;
   color: #fff;
   vertical-align: top; }
-  .contact-form__warning-icon .i {
+  .form-message__icon .i {
     border-radius: 100%;
     display: block;
     background: rgba(0, 0, 0, 0.2);
@@ -586,12 +608,18 @@ a {
     height: 30px;
     font-size: 30px; }
 
-.contact-form__warning-message {
-  vertical-align: top;
+.form-message--error .i:before {
+  content: '\e906'; }
+
+.form-message--success .i:before {
+  content: '\e904'; }
+
+.form-message__text {
+  vertical-align: middle;
   display: table-cell;
-  width: 80%;
   font-size: 17.5px;
-  color: #fff; }
+  color: #fff;
+  text-align: left; }
 
 .contact-form__input-warning {
   background: #555d60;
@@ -599,7 +627,8 @@ a {
   font-size: 15px;
   color: #fff;
   font-weight: 300;
-  position: relative; }
+  position: relative;
+  vertical-align: middle; }
   .contact-form__input-warning:before {
     position: absolute;
     top: -10px;
@@ -610,6 +639,31 @@ a {
     border-left: 8px solid transparent;
     border-right: 8px solid transparent;
     border-bottom: 10px solid #555d60; }
+
+@media (min-width: 768px) {
+  .contact {
+    padding: 59.5px 74px 98px 74px; }
+  .contact-form__cta {
+    font-size: 23.75px;
+    line-height: 35px;
+    max-width: 300px;
+    margin: 0 auto 49px auto; }
+  .contact-form__fieldset {
+    float: left;
+    padding-right: 10px;
+    width: 50%; }
+  .contact-form__container {
+    margin: 0 0 42px 0; }
+  .form-message {
+    margin: 0;
+    width: 100%; } }
+
+@media (min-width: 1024px) {
+  .contact-form__cta {
+    font-size: 36px;
+    line-height: 49px;
+    max-width: 400px;
+    margin: 0 auto 52.5px auto; } }
 
 .site-footer {
   padding: 42px 21px;
