--- a/src/scss/components/_form.scss
+++ b/src/scss/components/_form.scss
@@ -1,9 +1,15 @@
 $contact-padding: 10px;
+$contact-padding-tablet: 74px;
 
 .contact {
     background: url(../imgs/feed-bg.jpg) no-repeat top center;
     background-size: cover;
     padding: baselines(8.5) $contact-padding baselines(14) $contact-padding;
+}
+
+.contact-form {
+    max-width: 620px;
+    margin: 0 auto;
 }
 
 .contact-form__cta {
@@ -15,15 +21,38 @@ $contact-padding: 10px;
     line-height: baselines(4);
 }
 
-.contact-form__fieldset {
+.contact-form__container {
     background: rgba(255,255,255,0.2);
     padding: baselines(3) $contact-padding;;
     margin: 0 ($contact-padding * -1) baselines(3) ($contact-padding * -1);
 }
 
-.contact-form__container {
+.contact-form__label {
     display: block;
     margin-bottom: baselines(1);
+    position: relative;
+    clear: both;
+}
+
+.contact-form__label--textarea {
+    top: baselines(2);
+    margin-bottom: baselines(2);
+}
+
+.contact-form__label--valid {
+    &:after {
+        font-family: 'tamtam-icons';
+        content: '\e904';
+        position: absolute;
+        color: colour(green);
+        top: 0;
+        right: 0;
+        font-size: 50px;
+        height: 50px;
+        width: 50px;
+        display: block;
+        line-height: 1;
+    }
 }
 
 .contact-form__input {
@@ -40,7 +69,6 @@ $contact-padding: 10px;
 
 .contact-form__input--textarea {
     height: baselines(17);
-    margin-top: baselines(2);
 }
 
 .contact-form__button {
@@ -56,16 +84,16 @@ $contact-padding: 10px;
     display: block;
 }
 
-.contact-form__warning {
+.form-message {
     background: rgba(0,0,0, 0.2);
     display: table;
     padding: baselines(3) $contact-padding;;
     margin: 0 ($contact-padding * -1);
 }
 
-.contact-form__warning-icon {
+.form-message__icon {
     display: table-cell;
-    width: 20%;
+    width: 40px;
     color: #fff;
     vertical-align: top;
 
@@ -79,12 +107,24 @@ $contact-padding: 10px;
     }
 }
 
-.contact-form__warning-message {
-    vertical-align: top;
+.form-message--error {
+    .i:before {
+        content: '\e906';
+    }
+}
+
+.form-message--success {
+    .i:before {
+        content: '\e904';
+    }
+}
+
+.form-message__text {
+    vertical-align: middle;
     display: table-cell;
-    width: 80%;
     font-size: font-size(small-alt);
     color: #fff;
+    text-align: left;
 }
 
 .contact-form__input-warning {
@@ -94,6 +134,7 @@ $contact-padding: 10px;
     color: #fff;
     font-weight: 300;
     position: relative;
+    vertical-align: middle;
 
     &:before {
         $height: 10px;
@@ -110,4 +151,41 @@ $contact-padding: 10px;
         border-bottom: $height solid colour(grey);
     }
 
+}
+
+@media (min-width: breakpoint(tablet)) {
+    .contact {
+        padding: baselines(8.5) $contact-padding-tablet baselines(14) $contact-padding-tablet;
+    }
+
+    .contact-form__cta {
+        font-size: font-size(regular-alt);
+        line-height: baselines(5);
+        max-width: 300px;
+        margin: 0 auto baselines(7) auto;
+    }
+
+    .contact-form__fieldset {
+         float: left;
+         padding-right: 10px;
+         width: 50%;
+    }
+
+    .contact-form__container {
+        margin: 0 0 baselines(6) 0;
+    }
+
+    .form-message {
+        margin: 0;
+        width: 100%;
+    }
+}
+
+@media (min-width: breakpoint(desktop)) {
+    .contact-form__cta {
+        font-size: font-size(contact-cta);
+        line-height: baselines(7);
+        max-width: 400px;
+        margin: 0 auto baselines(7.5) auto;
+    }
 }
