--- a/src/scss/partials/_base.scss
+++ b/src/scss/partials/_base.scss
@@ -14,6 +14,7 @@ body {
     font-size: font-size(regular);
     line-height: baselines(3);
     min-width: breakpoint(mobile);
+    width: 100%;
     height: 100%;
     -webkit-tap-highlight-color: rgba(0,0,0,0);
 }
