add simple routing

--- a/src/scss/components/_footer.scss
+++ b/src/scss/components/_footer.scss
@@ -1,6 +1,7 @@
 .site-footer {
     padding: baselines(6) baselines(3);
     background: colour(black);
+    margin-top: auto;
 }
 
 .social-networks {
