--- a/src/scss/components/_form.scss
+++ b/src/scss/components/_form.scss
@@ -5,6 +5,7 @@ $contact-padding-tablet: 74px;
     background: url(../imgs/feed-bg.jpg) no-repeat top center;
     background-size: cover;
     padding: baselines(8.5) $contact-padding baselines(14) $contact-padding;
+    flex: 1;
 }
 
 .contact-form {
