--- a/src/scss/partials/_base.scss
+++ b/src/scss/partials/_base.scss
@@ -15,8 +15,17 @@ body {
     line-height: baselines(3);
     min-width: breakpoint(mobile);
     width: 100%;
-    height: 100%;
+    min-height: 100%;
     -webkit-tap-highlight-color: rgba(0,0,0,0);
+    display: flex;
+    flex-direction: column;
+}
+
+.site-content {
+    width: 100%;
+    flex: 1;
+    display: flex;
+    flex-direction: column;
 }
 
 img {
